20 July 2007: Wouter
	- Check CNAME chain before returning cache entry with CNAMEs.
	- Option harden-glue, default is on. It will discard out of zone
	  data. If disabled, performance is faster, but spoofing attempts
	  become a possibility. Note that still normalize scrubbing is done,
	  and that the potentially spoofed data is used for infrastructure
	  and not returned to the client.

19 July 2007: Wouter
	- shuffle NS selection when getting nameserver target addresses.
	- fixup of deadlock warnings, yield cpu in checklock code so that
	  freebsd scheduler selects correct process to run.
	- added identity and version config options and replies.
	- store cname messages complete answers.

18 July 2007: Wouter
	- do not query addresses, 127.0.0.1, and ::1 by default.

17 July 2007: Wouter
	- forward zone options in config file.
	- forward per zone in iterator. takes precendence over stubs.
	- fixup commithooks.
	- removed forward-to and forward-to-port features, subsumed by
	  new forward zones.
	- fix parser to handle absent server: clause.
	- change untrusted rrset test to account for scrubber that is now
	  applied during the test (which removes the poison, by the way).
	- feature, addresses can be specified with @portnumber, like nsd.conf.
	- test config files changed over to new forwarder syntax.

27 June 2007: Wouter
	- delete of mesh does a postorder traverse of the tree.
	- found and fixed a memory leak. For TTL=0 messages, that would
	  not be cached, instead the msg-replyinfo structure was leaked.
	- changed server selection so it will filter out hosts that are
	  unresponsive. This is defined as a host with the maximum rto value.
	  This means that unbound tried the host for retries up to 120 secs.
	  The rto value will time out after host-ttl seconds from the cache.
	  This keeps such unresolvable queries from taking up resources.
	- utility for keeping histogram.

26 June 2007: Wouter
	- mesh is called by worker, and iterator uses it.