@@ -5,6 +5,8 @@
 	  become a possibility. Note that still normalize scrubbing is done,
 	  and that the potentially spoofed data is used for infrastructure
 	  and not returned to the client.
+	- if glue times out, refetch by asking parent of delegation again.
+	  Much like asking for DS at the parent side.
 
 19 July 2007: Wouter
 	- shuffle NS selection when getting nameserver target addresses.
